--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,10 +13,16 @@
   font-family: 'Karla', sans-serif;
 }
 
+.glass{
+  background: rgba(232, 232, 232, 0.816);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
+
 .glass_card{
   height: auto;
   border-radius: 1rem;
-  background: rgba(211, 211, 211, 0.816);
+  background: rgba(232, 232, 232, 0.816);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(10px);
 }
